Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -887,9 +887,9 @@ In the case of Gemini/GMOS, it has a single spectrum exposed onto three detector
 LCO/FLOYDS has a beam-splitter to expose the first order red beam and the
 second order blue beam into two non-parallel curved spectra on a single chip.
 WHT/ISIS demonstrates an extremely low SNR reduction of an ultra-cool white
-dwarf with a smooth blackbody-like spectrum. The TNG/DOLORES is showing a
+dwarf with a smooth blackbody-like spectrum. The TNG/DOLORES shows a
 simultaneous tracing followed by sequential extraction of three spectra
-dispersed in one exposure.
+dispersed in one exposure. We compare the spectra with the published ones if they are available.
 
 \begin{table*}
     \centering
@@ -898,7 +898,7 @@ dispersed in one exposure.
         \multicolumn{4}{c}{Longslit Setup}\\\hline
         SOAR/GHTS            & Type IIn Supernova (AT22NXG)                & ?                   & HgArNe \\
         Liverpool/SPRAT      & Nova shell remnant (PTB)                    & ?                   & Xe \\
-        GTC/OSIRIS           & BLue Large Amplitude Pulsator (ZGP-BLAP-09) & ?                   & HgArNe \\
+        GTC/OSIRIS           & BLAP (ZGP-BLAP-09) & ?                   & HgArNe \\
         INT/IDS              & Binary Stars at high resolution             & ?                   & ? \\
         VLT/FORS             & AM CVn                                      & ?                   & ? \\\hline
         \multicolumn{4}{c}{Longslit-like Setup}\\\hline
