Updates from Overleaf
Former-commit-id: fab63fa9a98986aa1ab73de32ce8965927fbd146

--- a/main.tex
+++ b/main.tex
@@ -880,7 +880,7 @@ defaulted to $1.0$.
 
 \section{Example Data Reduction Product}
 Being a flexible toolkit, \texttt{ASPIRED} is not designed to reduce data for a
-specific instrument. Rather, it can be customised to suit many configurations,
+specific instrument. Instead, it can be customised to suit many configurations,
 as long as they are longslit-like. We demonstrate that with data products
 from nine different instruments, most of them have conventional long-slit settings.
 In the case of Gemini/GMOS, it has a single spectrum exposed onto three detectors.
@@ -891,13 +891,15 @@ dwarf with a smooth blackbody-like spectrum. The TNG/DOLORES shows a
 simultaneous tracing followed by sequential extraction of three spectra
 dispersed in one exposure. We compare the spectra with the published ones if they are available.
 
+\footnote{\url{https://www.wiserep.org/}}
+
 \begin{table*}
     \centering
     \begin{tabular}{l|c|c|c}\hline
         Telescope/Instrument & Object Type                                 & Spectral Resolution & Arc \\\hline\hline
         \multicolumn{4}{c}{Longslit Setup}\\\hline
         SOAR/GHTS            & Type IIn Supernova (AT22NXG)                & ?                   & HgArNe \\
-        Liverpool/SPRAT      & Nova shell remnant (PTB)                    & ?                   & Xe \\
+        Liverpool/SPRAT      & Nova shell remnant (DO Aql)                 & ?                   & Xe \\
         GTC/OSIRIS           & BLAP (ZGP-BLAP-09) & ?                   & HgArNe \\
         INT/IDS              & Binary Stars at high resolution             & ?                   & ? \\
         VLT/FORS             & AM CVn                                      & ?                   & ? \\\hline
